# backend

./: .coverage  .dockerignore  .env.local.example  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
business/: account.py  transaction.py  user.py
business/budget_run/: __init__.py  service.py
business/plaid_sync/: mappers.py  models.py  service.py
business/transaction_categorization/: models.py  prompts.py  service.py
database/: database.py  migrations.py
database/supabase/: account.py  balance.py  budget_run.py  friendship.py  orm.py  plaid_item.py  plaid_item_sync_state.py  settlement.py  transaction.py  transaction_split.py  user.py  user_plaid_items.py  users.py
database/supabase/DAO/: base.py  user.py  user_plaid_item.py  user_plaid_items.py  users.py
database/supabase/migrations/: 001_create_user_plaid_items.sql  002_create_users.sql  002_create_users_table.sql  003_create_accounts.sql  003_enable_rls_security.sql  004_create_split_bill_tables.sql  004_create_transaction_categories.sql  004_create_transaction_splits.sql  005_create_indexes.sql  005_create_transactions.sql  005_rename_access_token_column.sql  006_create_plaid_item_sync_state.sql  007_add_friendship_initiator.sql  008_create_budget_run_tables.sql
integrations/: gemini.py  plaid.py
models/: account.py  ai.py  auth_user.py  budget_run.py  cookies.py  friend.py  plaid.py  split.py  transaction.py  user.py  user_plaid_item.py
routers/: __init__.py  accounts.py  ai.py  budget_run.py  friends.py  plaid_sync.py  protected.py  splits.py  transactions.py  users.py
routers/auth/: __init__.py  callback.py  google.py  logout.py  refresh.py  session.py  token.py
routers/auth/authorize/: __init__.py  google.py
routers/plaid/: __init__.py  routes.py
schemas/: user.py  user_plaid_item.py
tests/: conftest.py  test_basic.py  test_database.py  test_health.py
utils/: constants.py  database.py
utils/middlewares/: auth_user.py
