[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=45.0.5",
    "dotenv>=0.9.9",
    "fastapi>=0.115.14",
    "google-genai>=1.38.0",
    "httpx>=0.28.1",
    "plaid-python>=34.0.0",
    "psycopg2-binary>=2.9.10",
    "pydantic[email]>=2.11.7",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "types-cryptography>=3.3.23.2",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "pyrefly>=0.26.1",
    "ruff>=0.12.7",
]

[tool.pyrefly]
python-interpreter = ".venv/bin/python"
